# bc-ml-trading

./: .env  .gitignore  README.md  pyproject.toml
bc-ml-trading/: app.py  ml.py
