[tool.poetry]
name = "bc-ml-trading"
version = "0.1.3"
description = "Machine Learning package"
authors = ["carlosb"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"

torch = {optional = true, version = "^1.10.0"}
tensorflow = {optional = true, version = "^2.5.0"}

[tool.poetry.extras]
deep-learning = ["torch", "tensorflow"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
